# COGS402

./: .gitignore
my-experiments/attractor-states/: .gitignore  Brainstorming.md  CLAUDE.md  README.md  pyproject.toml
my-experiments/attractor-states/experiments/: base_models.yaml  mid_conversation_interruption.yaml  paired_organism_instruct.yaml  prompt_anti_cycle.yaml  prompt_clinical.yaml  prompt_meta_aware.yaml  registry.yaml  single_instance.yaml  steered_diff_vectors.yaml  steered_other_vectors.yaml
my-experiments/attractor-states/judges/: __init__.py  attractor_description.py  behavior_evidence.py  coherence.py  convergence_taxonomy.py  convergence_trajectory.py  cyclicalness.py  goal_inference.py  themes.py
my-experiments/attractor-states/models/: gemma2_9b.yaml  gemma3_1b.yaml  gemma3_4b.yaml  llama31_8b.yaml  llama32_1b.yaml  qwen25_7b.yaml  qwen3_1b7.yaml  qwen3_8b.yaml
my-experiments/attractor-states/organisms/: em_risky_financial_advice.yaml  persona_goodness.yaml  persona_humor.yaml  persona_loving.yaml  persona_misalignment.yaml  persona_nonchalance.yaml  persona_poeticism.yaml  persona_remorse.yaml  persona_sycophancy.yaml  sdf_antarctic_rebound.yaml  sdf_fda_approval.yaml  sdf_kansas_fda.yaml  sdf_roman_concrete.yaml  subliminal_cat.yaml  taboo_gold.yaml  taboo_leaf.yaml  taboo_smile.yaml
my-experiments/attractor-states/protocols/: extended.yaml  single_instance.yaml  truncated.yaml
my-experiments/attractor-states/scripts/: _gen_configs.py  aggregate.py  analyze.py  check_jobs.py  download_models.py  judge.py  run_experiment.py  run_organism.py
(+156 files in other folders)
